2007-06-21  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/admin/command/commands.py (do_invoke, do_workerinvoke):
	Run quit function (callLater of reactor.stop) in error cases where
	we yield None.
	Catch invokes on components that are not started and so manager sends
	us SleepingComponentError.

2007-06-20  Andy Wingo  <wingo@pobox.com>

	* flumotion/component/feedcomponent010.py
	(FeedComponent._reconnectEater, FeedComponent.do_setup)
	(FeedComponent.init): No longer any need for lastConnectD, which
	was badly named anyway.

	* flumotion/component/feedcomponent.py
	(FeedComponentMedium.connectEater): Simplify via use of the
	FeedMedium's requestFeed, which is actually tested. As a new
	feature, cancel any pending connection before starting a new one.

	* flumotion/wizard/steps.py (Overlay.worker_changed_010): Fix so
	as to allow the user to proceed without PIL. We should use cairo
	instead, but whatevs...

2007-06-20  Michael Smith <msmith@fluendo.com>

	* flumotion/manager/manager.py:
	  If a component without config logs into the manager, add
	  'clock-master' and 'plugs' into the synthesised config we give it.
	  Should prevent KeyError: 'plugs' if someone/something tries to start
	  it (though starting it will still fail), and the clock-master will
	  prevent an exception being thrown that stops logout from completing
	  cleanly (which means that stopping the component doesn't work).

2007-06-20  Andy Wingo  <wingo@pobox.com>

	* flumotion/component/producers/webcam/admin_gtk.py
	(component_effectPropertyChanged): 
	* flumotion/component/producers/bttv/admin_gtk.py
	(component_effectPropertyChanged): 
	* flumotion/component/feedcomponent010.py (effectPropertyChanged):
	Remove, the property change notifications now go through UI
	states.

2007-06-20  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/consumers/disker/disker.py
	  (Disker.change_filename):
	Add extensions for flv and ts.
